# Boostcamp-AI-Tech-Product-Serving

.github/workflows/: deploy_ssh.yml
part2/02-streamlit/: app_mrc.py  app_mrc_test.ipynb
part2/04-cicd/: Dockerfile  app.py  config.yaml
part3/03-logging/app/: logger.py  logger_analysis.ipynb
part3/04-mlflow/: README.md
part4/01-bentoml/app/: frontend.py  main_update.py
part4/01-bentoml/examples/: bento_packer.py  bento_service.py
part4/02-airflow/: airflow.cfg  airflow.db
part4/02-airflow/logs/scheduler/: latest
peotry_test/: 01_simple_webserver.py  pyproject.toml
special_mission_2/: Makefile  test_pipeline.ipynb  testing_api.ipynb
special_mission_2/app/: frontend.py  main.py  model.py
test_airflow/: airflow.cfg  airflow.db
test_airflow/dags/: 01-bash-operator.py  02-python-operator.py  03-python-operator-with-context.py  04-python-operator-with-jinja.py
test_airflow/logs/scheduler/: latest
test_fastapi/: 02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  11_event_handler.py  12_api_router.py  13_exception_handling.py  14_background_tasks.py
test_mlflow/: mlflow.db
test_mlflow/logistic_regression/: conda.yaml  train.py
test_mlflow/mlruns/0/: meta.yaml
test_mlflow/mlruns/1/: meta.yaml
test_mlflow/mlruns/1/116bca0e9f604f17897607bb34cda30d/: meta.yaml
test_mlflow/mlruns/1/49c2f56245dc453d92a12f9631fef49b/: meta.yaml
test_mlflow/mlruns/1/4bd82af2f0fe4682b2e6bb273eac3cbe/: meta.yaml
test_mlflow/mlruns/1/55460b5e7c2e4c06925f5f22dde069bd/: meta.yaml
(+73 files in other folders)
