[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FastAPI Test"
authors = ["philhoon"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
fastapi = "^0.70.0"
pandas = "1.0.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
